<resources>
    <string name="app_name">TrassTarea</string>
    <string name="main_tv_slogan">Tus tareas, tu ritmo, tu éxito.</string>
    <string name="bt_empezar">Empezar</string>
    <string name="main_bt_empezar">Empezar</string>
    <string name="main_iv_descripcion">Imagen con el logotipo de la app</string>
    <string name="listado_tv_vacio">No hay tareas disponibles</string>
    <string name="listado_tv_no_prioritarias">No hay tareas prioritarias disponibles</string>
    <string name="elemento_tv_titulo">Título de la Tarea</string>
    <string name="elemento_tv_fecha">dd/mm/aaaa</string>
    <string name="elemento_tv_quedan">Quedan:</string>
    <string name="elemento_tv_ndias">00</string>
    <string name="elemento_tv_dias">días</string>
    <string name="item_acerca_de">Acerca de…</string>
    <string name="item_salir">Salir</string>
    <string name="item_crear_tarea">Crear Tarea</string>
    <string name="item_prioritarias">Prioritarias</string>
    <string name="item_descripcion">Descripción</string>
    <string name="item_editar">Editar</string>
    <string name="item_borrar">Borrar</string>
    <string name="tv_crear_tarea">Crear tarea</string>
    <string name="tv_editar_tarea">Editar tarea</string>
    <string name="tv_titulo">Título</string>
    <string name="et_titulo">Título de la tarea</string>
    <string name="tv_fecha_creacion">Fecha creación</string>
    <string name="tv_fecha_objetivo">Fecha objetivo</string>
    <string name="tv_progreso">Progreso</string>
    <string name="cb_prioritaria">Prioritaria</string>
    <string name="bt_siguiente">Siguiente</string>
    <string name="tv_descripcion">Descripción</string>
    <string name="bt_guardar">Guardar</string>
    <string name="bt_volver">Volver</string>
    <string name="hint_et_descripcion">Describe con detalle la tarea</string>
    <string name="msg_salida">Hasta pronto</string>
    <string name="tarea_add">Tarea añadida</string>
    <string name="et_fecha">dd/mm/aaaa</string>
    <string name="about_title">Acerca de…</string>
    <string name="about_msg">Mario Mascuñano Almagro\nIES Trassierra\nCurso 23/24</string>
    <string name="about_ok">Aceptar</string>
    <string name="dialog_confirmacion_titulo">Confirmar borrado</string>
    <string name="dialog_yes">Sí</string>
    <string name="dialog_no">No</string>
    <string name="dialog_msg">¿Confirmas que quieres borrar la tarea:</string>
    <string name="dialog_erased">Tarea borrada</string>
    <string name="dialog_not_found">Tarea no encontrada</string>
    <string name="dialog_description">Descripción</string>
    <string name="dialog_close">Cerrar</string>
    <string name="tarea_edit">Tarea editada</string>
    <string name="action_canceled">Acción cancelada</string>
    <string name="bt_cancelar">Cancelar</string>
    <string name="ad_campos_incompletos">Campos incompletos</string>
    <string name="ad_campos_contenido">Complete la información de título y fechas</string>
    <string name="bt_aceptar">Aceptar</string>
    <string name="ad_fechas">Fechas inconsistentes</string>
    <string name="ad_fechas_contenido">La fecha objetivo no puede ser anterior a la fecha de creación</string>
    <string name="tv_tituloTarea">Título</string>
    <string name="hint_titulo_tarea">Dale nombre a tu tarea</string>
    <string name="tv_dias">días</string>
    <string name="tv_quedan">Quedan</string>
    <string name="item_preferencias">Preferencias</string>
    <string name="title_activity_preferencias">Preferencias</string>

    <!-- Preference Titles -->
    <string name="header_preferencias">Preferencias</string>

    <!-- Sync Preferences -->
    <string name="preference_visualizacion">Visualización</string>
    <string name="preference_ordenacion">Ordenación</string>
    <string name="preference_almacenamiento">Almacenamiento</string>
    <string name="preference_basedatos">Base de datos externa</string>
    <string name="pref_visualizacion_tema">Tema</string>
    <string name="tema_oscuro">Oscuro</string>
    <string name="tema_claro">Claro</string>
    <string name="pref_visualizacion_tamaño">Fuente</string>
    <string name="pref_criterio">Criterio</string>
    <string name="pref_orden">Orden</string>
    <string name="pref_orden_on">Ascendente</string>
    <string name="pref_orden_off">Descendente</string>
    <string name="pref_almacenamiento_sd">Memoria SD</string>
    <string name="pref_basedatos">Base de datos</string>
    <string name="pref_basedatos_off">Interna</string>
    <string name="pref_basedatos_on">Externa</string>
    <string name="title_bd_externa">Nombre BBDD</string>
    <string name="title_db_port">Puerto</string>
    <string name="title_user">Usuario</string>
    <string name="title_password">Contraseña</string>
    <string name="pref_limpieza">Limpieza</string>
    <string name="tarea_add_document">Pulsa el botón para añadir un documento</string>
    <string name="tarea_add_image">Pulsa el botón para añadir una imagen</string>
    <string name="tarea_add_audio">Pulsa el botón para añadir un archivo de audio</string>
    <string name="tarea_add_video">Pulsa el botón para añadir un archivo de video</string>
    <string name="key_bd_externa">Nombre BBDD</string>
    <string name="reset_preferences">Restablecer preferencias</string>
    <string name="reset_preferences_dialog_message">Se van a restablecer las preferencias a sus valores iniciales, ¿está seguro?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="item_estadisticas">Estadísticas</string>
    <string name="sdcard">sd</string>
    <string name="tv_estadisticas">Estadísticas</string>
    <string name="tv_est_totalTareas">Nº Total de Tareas</string>
    <string name="tv_est_totalPrioritarias">Nº Tareas Prioritarias</string>
</resources>
